Fixed nav alignment issue.
Closes #5.

--- a/style.scss
+++ b/style.scss
@@ -351,11 +351,10 @@ nav {
   }
 
   a {
-    margin-left: 20px;
+    margin-right: 1.5em;
     color: $white;
     text-align: left;
     font-weight: bold;
-    letter-spacing: 1px;
 
     @include mobile {
       margin: 0 7px;
